--- a/SumDU/Base.lproj/Main.storyboard
+++ b/SumDU/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
         <!--Schedule-->
         <scene sceneID="XbM-Rf-DsK">
             <objects>
-                <viewController id="GcZ-4f-J3p" sceneMemberID="viewController">
+                <viewController id="GcZ-4f-J3p" customClass="ScheduleViewController" customModule="SumDU" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="9Fx-WE-fAx"/>
                         <viewControllerLayoutGuide type="bottom" id="jmn-RX-PbZ"/>
@@ -188,15 +188,29 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="gyA-dI-wo6">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LabelCell" textLabel="xeF-Bm-BG5" style="IBUITableViewCellStyleDefault" id="ecW-1X-mRT">
                                         <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gyA-dI-wo6" id="2fm-Hd-SzB">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ecW-1X-mRT" id="a92-de-VmU">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xeF-Bm-BG5">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="GcZ-4f-J3p" id="1Sn-X2-a5s"/>
+                                    <outlet property="delegate" destination="GcZ-4f-J3p" id="APC-iJ-vJW"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -208,6 +222,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Schedule" id="9SS-Gt-5Zd"/>
+                    <connections>
+                        <outlet property="tableView" destination="PwZ-WB-DNo" id="W0E-FO-C6c"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BFB-jj-f0q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
